src/test/resources/com/yuvalshavit/effes/test/builtins/builtin-method-in-userland.err
parse error (at line 3, column 30: newline)
can't declare built-in methods in userland source code (at line 2, column 21: @builtin)
