src/test/resources/com/yuvalshavit/effes/test/builtins/builtin-method-in-userland.ef
type Foo:
  whatever -> Void: @builtin
